# octpus-app

./: .env.example  main.py  pipeline.dio  pyproject.toml
analytics_agent/: __init__.py  agent.py  agent2.py  prompt.py  states.py
analytics_agent/nodes/: __init__.py  cafe24_mcp_agent.py  delivery.py
mcp_server/: cafe24_api_tools.py  cafe24_client.py  cafe24_config.py  cafe24_mcp_tools.py  cafe24_repository.py  cafe24_service.py
server/: auth_redirect.py  run_oauth_server.py
test/: test_analytics_agent.py
